--- a/index.html
+++ b/index.html
@@ -13,22 +13,47 @@
     <!-- Contact Header -->
     <header class="bg-teal-950 text-white py-2">
         <div class="container mx-auto px-4">
-            <div class="flex flex-col md:flex-row justify-between items-center space-y-2 md:space-y-0">
-                <div class="flex flex-col md:flex-row md:space-x-4 space-y-2 md:space-y-0 w-full md:w-auto">
-                    <a href="tel: 0815369120" class="hover:text-gray-300 text-sm md:text-base">
+            <!-- Desktop Layout -->
+            <div class="hidden md:flex justify-between items-center">
+                <div class="flex space-x-4">
+                    <a href="tel: 0815369120" class="hover:text-gray-300">
                         <i class="fas fa-phone"></i> 081 536 9120
                     </a>
-                    <a href="mailto:info@fatsolelo.com" class="hover:text-gray-300 text-sm md:text-base">
+                    <a href="mailto:info@fatsolelo.com" class="hover:text-gray-300">
                         <i class="fas fa-envelope"></i>  Seba.Fatsolelo@gmail.com
                     </a>
-                    <a href="#" class="hover:text-gray-300 text-sm md:text-base hidden md:inline-block">
+                    <a href="#" class="hover:text-gray-300">
                         <i class="fas fa-clock"></i>  Monday - Friday 09:00 - 16:00
                     </a>
                 </div>
                 <div class="flex space-x-4">
-                    <a href="https://www.facebook.com/fatsolelo" class="hover:text-gray-300"><i class="fab fa-facebook text-xl md:text-2xl"></i></a>
-                    <a href="https://www.linkedin.com/in/sebaetseng-molema-0000000000000000000000000000000000000000/" class="hover:text-gray-300"><i class="fab fa-linkedin text-xl md:text-2xl"></i></a>
-                    <a href="https://twitter.com/fatsolelo" class="hover:text-gray-300"><i class="fab fa-twitter text-xl md:text-2xl"></i></a>
+                    <a href="https://www.facebook.com/fatsolelo" class="hover:text-gray-300"><i class="fab fa-facebook text-2xl"></i></a>
+                    <a href="https://www.linkedin.com/in/sebaetseng-molema-0000000000000000000000000000000000000000/" class="hover:text-gray-300"><i class="fab fa-linkedin text-2xl"></i></a>
+                    <a href="https://twitter.com/fatsolelo" class="hover:text-gray-300"><i class="fab fa-twitter text-2xl"></i></a>
+                </div>
+            </div>
+
+            <!-- Mobile Layout -->
+            <div class="md:hidden grid grid-cols-2 gap-2">
+                <!-- First Row -->
+                <div class="col-span-2 grid grid-cols-2 gap-2">
+                    <a href="tel: 0815369120" class="hover:text-gray-300 text-sm">
+                        <i class="fas fa-phone"></i> 081 536 9120
+                    </a>
+                    <a href="mailto:info@fatsolelo.com" class="hover:text-gray-300 text-sm">
+                        <i class="fas fa-envelope"></i>  Seba.Fatsolelo@gmail.com
+                    </a>
+                </div>
+                <!-- Second Row -->
+                <div class="col-span-2 grid grid-cols-2 gap-2">
+                    <a href="#" class="hover:text-gray-300 text-sm">
+                        <i class="fas fa-clock"></i>  Monday - Friday 09:00 - 16:00
+                    </a>
+                    <div class="flex space-x-4 justify-end">
+                        <a href="https://www.facebook.com/fatsolelo" class="hover:text-gray-300"><i class="fab fa-facebook text-xl"></i></a>
+                        <a href="https://www.linkedin.com/in/sebaetseng-molema-0000000000000000000000000000000000000000/" class="hover:text-gray-300"><i class="fab fa-linkedin text-xl"></i></a>
+                        <a href="https://twitter.com/fatsolelo" class="hover:text-gray-300"><i class="fab fa-twitter text-xl"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
