--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
             <div class="md:hidden grid grid-cols-2 gap-2">
                 <!-- First Row -->
                 <div class="col-span-2 grid grid-cols-2 gap-2">
-                    <a href="tel: 0815369120" class="hover:text-gray-300 text-sm">
-                        <i class="fas fa-phone"></i> 081 536 9120
+                    <a href="tel: 0815369120" class="hover:text-gray-300 text-sm flex items-center">
+                        <i class="fas fa-phone mr-1"></i> 081 536 9120
                     </a>
-                    <a href="mailto:info@fatsolelo.com" class="hover:text-gray-300 text-sm">
-                        <i class="fas fa-envelope"></i>  Seba.Fatsolelo@gmail.com
+                    <a href="mailto:info@fatsolelo.com" class="hover:text-gray-300 text-sm flex items-center">
+                        <i class="fas fa-envelope mr-1"></i> Seba.Fatsolelo@gmail.com
                     </a>
                 </div>
                 <!-- Second Row -->
                 <div class="col-span-2 grid grid-cols-2 gap-2">
-                    <a href="#" class="hover:text-gray-300 text-sm">
-                        <i class="fas fa-clock"></i>  Monday - Friday 09:00 - 16:00
+                    <a href="#" class="hover:text-gray-300 text-sm flex items-center">
+                        <i class="fas fa-clock mr-1"></i> Monday - Friday 09:00 - 16:00
                     </a>
                     <div class="flex space-x-4 justify-end">
                         <a href="https://www.facebook.com/fatsolelo" class="hover:text-gray-300"><i class="fab fa-facebook text-xl"></i></a>
