--- a/index.html
+++ b/index.html
@@ -127,8 +127,15 @@
         .slideshow-container {
             position: relative;
             width: 100%;
-            height: 80vh;
-            min-height: 600px;
+            height: 60vh;
+            min-height: 400px;
+        }
+
+        @media (min-width: 768px) {
+            .slideshow-container {
+                height: 80vh;
+                min-height: 600px;
+            }
         }
 
         .slide {
@@ -164,8 +171,8 @@
             transform: translateY(-50%);
             background: rgba(255, 255, 255, 0.2);
             color: white;
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -174,6 +181,13 @@
             transition: all 0.3s ease;
             z-index: 10;
             border-radius: 50%;
+        }
+
+        @media (min-width: 768px) {
+            .slideshow-control {
+                width: 50px;
+                height: 50px;
+            }
         }
 
         .slideshow-control:hover {
@@ -182,21 +196,31 @@
         }
 
         .prev {
-            left: 2rem;
+            left: 1rem;
         }
 
         .next {
-            right: 2rem;
+            right: 1rem;
+        }
+
+        @media (min-width: 768px) {
+            .prev {
+                left: 2rem;
+            }
+
+            .next {
+                right: 2rem;
+            }
         }
 
         .slideshow-pause {
             position: absolute;
-            bottom: 2rem;
-            right: 2rem;
+            bottom: 1rem;
+            right: 1rem;
             background: rgba(255, 255, 255, 0.2);
             color: white;
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -205,6 +229,15 @@
             cursor: pointer;
             transition: all 0.3s ease;
             z-index: 10;
+        }
+
+        @media (min-width: 768px) {
+            .slideshow-pause {
+                bottom: 2rem;
+                right: 2rem;
+                width: 50px;
+                height: 50px;
+            }
         }
 
         .slideshow-pause:hover {
@@ -214,21 +247,35 @@
 
         .slide-indicators {
             position: absolute;
-            bottom: 2rem;
+            bottom: 1rem;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
-            gap: 1rem;
+            gap: 0.75rem;
             z-index: 10;
         }
 
+        @media (min-width: 768px) {
+            .slide-indicators {
+                bottom: 2rem;
+                gap: 1rem;
+            }
+        }
+
         .indicator {
-            width: 12px;
-            height: 12px;
+            width: 10px;
+            height: 10px;
             border-radius: 50%;
             background: rgba(255, 255, 255, 0.3);
             cursor: pointer;
             transition: all 0.3s ease;
+        }
+
+        @media (min-width: 768px) {
+            .indicator {
+                width: 12px;
+                height: 12px;
+            }
         }
 
         .indicator:hover {
@@ -238,26 +285,6 @@
         .indicator.active {
             background: white;
             transform: scale(1.2);
-        }
-
-        @media (max-width: 768px) {
-            .slideshow-container {
-                height: 70vh;
-            }
-
-            .slideshow-control,
-            .slideshow-pause {
-                width: 40px;
-                height: 40px;
-            }
-
-            .prev {
-                left: 1rem;
-            }
-
-            .next {
-                right: 1rem;
-            }
         }
 
         .error-message {
@@ -284,8 +311,8 @@
                     <div class="absolute inset-0 flex items-center">
                         <div class="container mx-auto px-4">
                             <div class="max-w-3xl mx-auto text-center">
-                                <h1 class="text-4xl md:text-9xl font-bold mb-6 text-white">Welcome <br> to <br> Fatsolelo</h1>
-                                <a href="#contact" class="inline-block bg-white text-gray-900 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition duration-300">
+                                <h1 class="text-4xl md:text-6xl lg:text-9xl font-bold mb-4 md:mb-6 text-white leading-tight">Welcome <br class="hidden md:block"> to <br class="hidden md:block"> Fatsolelo</h1>
+                                <a href="#contact" class="inline-block bg-white text-gray-900 px-6 md:px-8 py-2 md:py-3 rounded-full font-semibold hover:bg-gray-100 transition duration-300 text-sm md:text-base">
                                     Get Started
                                 </a>
                             </div>
@@ -298,9 +325,9 @@
                     <div class="absolute inset-0 flex items-center">
                         <div class="container mx-auto px-4">
                             <div class="max-w-3xl text-left">
-                                <h2 class="text-4xl md:text-9xl font-bold mb-6 text-white">Expert HR Solutions</h2>
-                                <p class="text-xl md:text-2xl mb-8 text-gray-200">Comprehensive HR services tailored to your business needs</p>
-                                <a href="#hr" class="inline-block bg-white text-gray-900 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition duration-300">
+                                <h2 class="text-4xl md:text-6xl lg:text-9xl font-bold mb-4 md:mb-6 text-white leading-tight">Expert HR Solutions</h2>
+                                <p class="text-lg md:text-xl lg:text-2xl mb-6 md:mb-8 text-gray-200">Comprehensive HR services tailored to your business needs</p>
+                                <a href="#hr" class="inline-block bg-white text-gray-900 px-6 md:px-8 py-2 md:py-3 rounded-full font-semibold hover:bg-gray-100 transition duration-300 text-sm md:text-base">
                                     Learn More
                                 </a>
                             </div>
@@ -313,9 +340,9 @@
                     <div class="absolute inset-0 flex items-center">
                         <div class="container mx-auto px-4">
                             <div class="max-w-3xl mx-auto text-center">
-                                <h2 class="text-4xl md:text-9xl font-bold mb-6 text-white">Professional Training</h2>
-                                <p class="text-xl md:text-2xl mb-8 text-gray-200">Empower your workforce with our expert training programs</p>
-                                <a href="#training" class="inline-block bg-white text-gray-900 px-8 py-3 rounded-full font-semibold hover:bg-gray-100 transition duration-300">
+                                <h2 class="text-4xl md:text-6xl lg:text-9xl font-bold mb-4 md:mb-6 text-white leading-tight">Professional Training</h2>
+                                <p class="text-lg md:text-xl lg:text-2xl mb-6 md:mb-8 text-gray-200">Empower your workforce with our expert training programs</p>
+                                <a href="#training" class="inline-block bg-white text-gray-900 px-6 md:px-8 py-2 md:py-3 rounded-full font-semibold hover:bg-gray-100 transition duration-300 text-sm md:text-base">
                                     Explore Training
                                 </a>
                             </div>
