about us mobile responsive

--- a/index.html
+++ b/index.html
@@ -437,42 +437,41 @@
         </script>
 
         <!-- About Section -->
-        <section id="about" class="py-12 md:py-20">
+        <section id="about" class="py-20">
             <div class="container mx-auto px-4">
-                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-start">
+                <div class="grid md:grid-cols-2 gap-12 items-start">
                     <!-- Image Column -->
-                    <div class="relative order-2 md:order-1">
+                    <div class="relative order-1 md:order-none">
                         <div class="aspect-w-4 aspect-h-3 rounded-lg overflow-hidden shadow-xl">
                             <img src="images/Talk2.webp" 
                                  alt="FatsoLelo Team" 
                                  class="object-cover w-full h-full">
                         </div>
-                        <div class="absolute -bottom-6 md:-bottom-11 -right-4 md:-right-6 bg-teal-950 text-white p-4 md:p-6 rounded-lg shadow-lg hidden md:block">
-                            <p class="text-xl md:text-2xl font-bold">20+</p>
-                            <p class="text-xs md:text-sm">Years of Experience</p>
+                        <div class="absolute -bottom-11 -right-6 bg-teal-950 text-white p-6 rounded-lg shadow-lg hidden md:block">
+                            <p class="text-2xl font-bold">20+</p>
+                            <p class="text-sm">Years of Experience</p>
                         </div>
                     </div>
 
                     <!-- Text Column -->
-                    <div class="text-gray-600 order-1 md:order-2">
-                        <h2 class="text-3xl md:text-4xl font-bold text-left mb-4 text-gray-900">About Us</h2>
-                        <p class="mb-4 md:mb-6 text-sm md:text-base">
+                    <div class="text-gray-600 order-2 md:order-none">
+                        <h2 class="text-4xl font-bold text-left mb-4 text-gray-900">About Us</h2>
+                        <p class="mb-6">
                             Fatsolelo is a consulting organization with over 20 years of full-cycle Human Resource Management experience. 
                             We pride ourselves on providing tailored HR solutions to businesses of all sizes, focusing on practical and efficient strategies to meet your organizational needs.
                         </p>
-                        <p class="mb-4 md:mb-6 text-sm md:text-base">
+                        <p class="mb-6">
                             Our services are designed to support your HR functions while ensuring compliance, development, and growth for your business.
                         </p>
-                        <div class="aspect-w-4 aspect-h-3 rounded-lg text-center overflow-hidden shadow-sm flex justify-center items-center">
+                        <div class="aspect-w-4 aspect-h-3 rounded-lg text-center overflow-hidden shadow-sm flex justify-center items-center order-3 md:order-none">
                             <img src="images/illustration.webp" 
                                  alt="illustration" 
-                                 class="object-cover w-[250px] md:w-[300px] h-[200px] md:h-[250px]">
+                                 class="object-cover w-[300px] h-[250px]">
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-    
+        </section>    
         <!-- HR Services Section -->
         <section id="hr" class="py-20 relative">
             <!-- Background Image with Overlay -->
