horizontal overflow fix

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
     </nav>
 
     <style>
+        /* Prevent horizontal overflow */
+        html, body {
+            overflow-x: hidden;
+            width: 100%;
+            position: relative;
+        }
+        
         .nav-link {
             transition: color 0.3s ease;
         }
