--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             width: 100%;
             position: relative;
         }
-        
+
         .nav-link {
             transition: color 0.3s ease;
         }
@@ -454,7 +454,13 @@
                                  alt="FatsoLelo Team" 
                                  class="object-cover w-full h-full">
                         </div>
+                        <!-- Desktop Experience Card -->
                         <div class="absolute -bottom-11 -right-6 bg-teal-950 text-white p-6 rounded-lg shadow-lg hidden md:block">
+                            <p class="text-2xl font-bold">20+</p>
+                            <p class="text-sm">Years of Experience</p>
+                        </div>
+                        <!-- Mobile Experience Card -->
+                        <div class="md:hidden bg-teal-950 text-white p-4 rounded-lg shadow-lg mt-4 text-center">
                             <p class="text-2xl font-bold">20+</p>
                             <p class="text-sm">Years of Experience</p>
                         </div>
@@ -478,7 +484,8 @@
                     </div>
                 </div>
             </div>
-        </section>    
+        </section>
+                   
         <!-- HR Services Section -->
         <section id="hr" class="py-20 relative">
             <!-- Background Image with Overlay -->
