img reposition on mobile

--- a/index.html
+++ b/index.html
@@ -460,9 +460,9 @@
                             <p class="text-sm">Years of Experience</p>
                         </div>
                         <!-- Mobile Experience Card -->
-                        <div class="md:hidden bg-teal-950 text-white p-4 rounded-lg shadow-lg mt-4 text-center">
-                            <p class="text-2xl font-bold">20+</p>
-                            <p class="text-sm">Years of Experience</p>
+                        <div class="md:hidden absolute -bottom-6 -right-4 bg-teal-950 text-white p-4 rounded-lg shadow-lg">
+                            <p class="text-xl font-bold">20+</p>
+                            <p class="text-xs">Years of Experience</p>
                         </div>
                     </div>
 
