update on mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -468,7 +468,10 @@
 
                     <!-- Text Column -->
                     <div class="text-gray-600 order-2 md:order-none">
-                        <h2 class="text-4xl font-bold text-left mb-4 text-gray-900">About Us</h2>
+                        <!-- Mobile About Us Heading -->
+                        <h2 class="text-4xl font-bold text-left mb-4 text-gray-900 md:hidden">About Us</h2>
+                        <!-- Desktop About Us Heading -->
+                        <h2 class="text-4xl font-bold text-left mb-4 text-gray-900 hidden md:block">About Us</h2>
                         <p class="mb-6">
                             Fatsolelo is a consulting organization with over 20 years of full-cycle Human Resource Management experience. 
                             We pride ourselves on providing tailored HR solutions to businesses of all sizes, focusing on practical and efficient strategies to meet your organizational needs.
