--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <div class="absolute inset-0 flex items-center">
                         <div class="container mx-auto px-4">
                             <div class="max-w-3xl mx-auto text-center">
-                                <h1 class="text-4xl md:text-6xl lg:text-9xl font-bold mb-4 md:mb-6 text-white leading-tight">Welcome <br class="hidden md:block"> to <br class="hidden md:block"> Fatsolelo</h1>
+                                <h1 class="text-4xl md:text-6xl lg:text-9xl font-bold mb-4 md:mb-6 text-white leading-tight">Welcome <br> to <br> Fatsolelo</h1>
                                 <a href="#contact" class="inline-block bg-white text-gray-900 px-6 md:px-8 py-2 md:py-3 rounded-full font-semibold hover:bg-gray-100 transition duration-300 text-sm md:text-base">
                                     Get Started
                                 </a>
