--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <style>
         /* Prevent horizontal overflow */
-        html, body {
+        body {
             overflow-x: hidden;
             width: 100%;
             position: relative;
