--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             <!-- Mobile Menu -->
             <div class="md:hidden hidden" id="mobile-menu">
                 <div class="flex flex-col space-y-3 pb-3">
-                    <a href="#about" class="nav-link text-gray-600 hover:text-orange-300 text-sm">About</a>
-                    <a href="#hr" class="nav-link text-gray-600 hover:text-orange-300 text-sm">HR</a>
-                    <a href="#labour" class="nav-link text-gray-600 hover:text-orange-300 text-sm">Labour</a>
-                    <a href="#training" class="nav-link text-gray-600 hover:text-orange-300 text-sm">Training</a>
-                    <a href="#contact" class="nav-link text-gray-600 hover:text-orange-300 text-sm">Contact</a>
+                    <a href="#about" class="nav-link text-gray-600  text-sm">About</a>
+                    <a href="#hr" class="nav-link text-gray-600  text-sm">HR</a>
+                    <a href="#labour" class="nav-link text-gray-600  text-sm">Labour</a>
+                    <a href="#training" class="nav-link text-gray-600  text-sm">Training</a>
+                    <a href="#contact" class="nav-link text-gray-600  text-sm">Contact</a>
                 </div>
             </div>
         </div>
