error fix on overflow

--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
 
     <style>
         /* Prevent horizontal overflow */
-        body {
+        html, body {
             overflow-x: hidden;
             width: 100%;
-            position: relative;
         }
 
         .nav-link {
