--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                     <!-- Text Column -->
                     <div class="text-gray-600 order-1 md:order-none">
                         <!-- Mobile About Us Heading -->
-                        <h2 class="text-4xl font-bold text-left mb-4 text-gray-900 md:hidden">About Us</h2>
+                        <h2 class="text-4xl font-bold text-center mb-4 text-gray-900 md:hidden">About Us</h2>
                         <!-- Desktop About Us Heading -->
                         <h2 class="text-4xl font-bold text-left mb-4 text-gray-900 hidden md:block">About Us</h2>
                         <p class="mb-6">
@@ -497,8 +497,7 @@
 
             <div class="container mx-auto px-4 relative">
                 <h2 class="text-4xl font-bold text-center mb-4 text-white" data-aos="fade-down">HR Services</h2>
-                <p class="text-xl text-center mb-12 text-gray-300 max-w-3xl mx-auto" data-aos="fade-up">Comprehensive HR solutions tailored to your organization's needs</p>
-                
+
                 <!-- First Row - HR Consulting -->
                 <div class="mb-8" data-aos="fade-up" data-aos-delay="100">
                     <div class="backdrop-blur-lg bg-white bg-opacity-10 rounded-xl p-8 text-white border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300">
