labour & Training Responsiveness

--- a/index.html
+++ b/index.html
@@ -631,14 +631,14 @@
         <section id="labour" class="py-20">
             <div class="container mx-auto px-4">
                 <h2 class="text-4xl font-bold text-center mb-12">Labour Solutions</h2>
-                <div class="grid md:grid-cols-3 divide-x divide-gray-200">
+                <div class="grid md:grid-cols-3 gap-8">
                     <!-- Labor Dispute Resolution -->
-                    <div class="p-8 text-center">
+                    <div class="p-6 md:p-8 text-center bg-white rounded-lg shadow-md">
                         <div class="w-16 h-16 mx-auto mb-6 bg-teal-950 rounded-full flex items-center justify-center">
                             <i class="fas fa-gavel text-2xl text-white"></i>
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Labor Dispute Resolution</h3>
-                        <p class="text-gray-600">
+                        <p class="text-gray-600 text-sm md:text-base">
                             Fatsolelo offers labour dispute mediation and alternative dispute resolution (ADR) services—including conciliation and arbitration—as a more effective and cost-efficient alternative to traditional legal processes. 
                             Our structured approach helps parties identify issues, explore solutions, and reach mutually acceptable agreements. 
                             In contrast to the strained and often delayed processes at the CCMA—characterised by a legalistic approach and declining settlement rates—Fatsolelo's services provide timely, practical, and resolution-focused outcomes.
@@ -646,12 +646,12 @@
                     </div>
 
                     <!-- Payroll Services -->
-                    <div class="p-8 text-center">
+                    <div class="p-6 md:p-8 text-center bg-white rounded-lg shadow-md">
                         <div class="w-16 h-16 mx-auto mb-6 bg-teal-950 rounded-full flex items-center justify-center">
                             <i class="fas fa-money-check-alt text-2xl text-white"></i>
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Payroll & Benefits</h3>
-                        <p class="text-gray-600">
+                        <p class="text-gray-600 text-sm md:text-base">
                             We manage the full payroll process in compliance with SARS regulations and Labour Law. 
                             This includes processing payroll runs, calculating statutory deductions such as PAYE, UIF, and SDL, and issuing payslips and IRP5s. 
                             We handle the monthly submission of EMP201 forms and facilitate payments through eFiling. 
@@ -661,12 +661,12 @@
                     </div>
 
                     <!-- Employment Equity -->
-                    <div class="p-8 text-center">
+                    <div class="p-6 md:p-8 text-center bg-white rounded-lg shadow-md">
                         <div class="w-16 h-16 mx-auto mb-6 bg-teal-950 rounded-full flex items-center justify-center">
                             <i class="fas fa-balance-scale text-2xl text-white"></i>
                         </div>
                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Employment Equity</h3>
-                        <p class="text-gray-600">
+                        <p class="text-gray-600 text-sm md:text-base">
                             It's that time of the year when employers must submit their Employment Equity reports to the Department of Labour—a critical process for identifying transformation gaps and implementing affirmative action measures. 
                             Fatsolelo supports organisations in preparing and submitting these annual reports efficiently, ensuring full compliance with regulatory requirements ahead of deadlines. 
                             In addition, we assist with developing a Leadership Development strategy that strengthens your transformation efforts and positions your leadership team for long-term success—meeting both compliance goals and business objectives.
@@ -681,76 +681,76 @@
             <div class="container mx-auto px-4">
                 <h2 class="text-4xl text-white font-bold text-center mb-12" data-aos="fade-down">Training & Development</h2>                
                 <!-- Training & Development -->
-                <div class="grid md:grid-cols-2 gap-12 items-center mb-20">
+                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center mb-12 md:mb-20">
                     <!-- Image Column -->
-                    <div class="relative" data-aos="fade-right">
+                    <div class="relative order-1 md:order-none" data-aos="fade-right">
                         <div class="aspect-w-16 aspect-h-9 rounded-xl overflow-hidden shadow-xl">
-                            <img src="images/Talk.webp" alt="Training & Development" class="object-cover w-full h-[400px]">
+                            <img src="images/Talk.webp" alt="Training & Development" class="object-cover w-full h-[300px] md:h-[400px]">
                         </div>
                     </div>
 
                     <!-- Content Column -->
-                    <div class="space-y-6" data-aos="fade-left" data-aos-delay="100">
+                    <div class="space-y-4 md:space-y-6 order-2 md:order-none" data-aos="fade-left" data-aos-delay="100">
                         <h3 class="text-2xl font-semibold text-white">Comprehensive Training Solutions</h3>
-                        <p class="text-white">
+                        <p class="text-white text-sm md:text-base">
                             We assist organizations in complying with the Sector Education and Training Authority (SETA) by providing comprehensive support in the development and implementation of HR strategies.
                             Our approach ensures that clients are aligned with regulatory requirements while achieving their organizational goals. 
                             Through our services, we help build strong foundations for sustainable growth and compliance.
                         </p>
-                        <ul class="space-y-3">
+                        <ul class="space-y-2 md:space-y-3">
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Assessing the organization's vision, goals, and objectives</span>
+                                <span class="text-white text-sm md:text-base">Assessing the organization's vision, goals, and objectives</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Creating a strategic HR roadmap to guide change</span>
+                                <span class="text-white text-sm md:text-base">Creating a strategic HR roadmap to guide change</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Analyzing current organizational structures</span>
+                                <span class="text-white text-sm md:text-base">Analyzing current organizational structures</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Developing aligned HR plans to meet compliance and performance goals</span>
+                                <span class="text-white text-sm md:text-base">Developing aligned HR plans to meet compliance and performance goals</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Implementing a practical action plan to achieve desired outcomes</span>
+                                <span class="text-white text-sm md:text-base">Implementing a practical action plan to achieve desired outcomes</span>
                             </li>
                         </ul>
                     </div>
                 </div>
 
                 <!-- Training Courses -->
-                <div class="grid md:grid-cols-2 gap-12 items-center">
+                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center">
                     <!-- Content Column -->
-                    <div class="space-y-6 order-2 md:order-1" data-aos="fade-right" data-aos-delay="200">
+                    <div class="space-y-4 md:space-y-6 order-2 md:order-1" data-aos="fade-right" data-aos-delay="200">
                         <h3 class="text-2xl font-semibold text-white">Specialized Training Courses</h3>
-                        <p class="text-white">
+                        <p class="text-white text-sm md:text-base">
                             We assist organisations in complying with the Sector Education and Training Authority (SETA) by offering expert guidance and support across key areas of the Skills Development framework.
                             Our services ensure alignment with legislative requirements while maximising the value derived from training investments.
                         </p>
-                        <ul class="space-y-3">
+                        <ul class="space-y-2 md:space-y-3">
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Ensuring training and development policies align with SETA standards</span>
+                                <span class="text-white text-sm md:text-base">Ensuring training and development policies align with SETA standards</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Assisting with submission of Workplace Skills Plans and Annual Training Reports</span>
+                                <span class="text-white text-sm md:text-base">Assisting with submission of Workplace Skills Plans and Annual Training Reports</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Guiding employers on claiming 20% of the Skills Development Levy</span>
+                                <span class="text-white text-sm md:text-base">Guiding employers on claiming 20% of the Skills Development Levy</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Maximising points under the Skills Development element for B-BBEE</span>
+                                <span class="text-white text-sm md:text-base">Maximising points under the Skills Development element for B-BBEE</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
-                                <span class="text-white">Securing funding for addressing critical and scarce skills</span>
+                                <span class="text-white text-sm md:text-base">Securing funding for addressing critical and scarce skills</span>
                             </li>
                         </ul>
                     </div>
@@ -758,7 +758,7 @@
                     <!-- Image Column -->
                     <div class="relative order-1 md:order-2" data-aos="fade-left" data-aos-delay="300">
                         <div class="aspect-w-16 aspect-h-9 rounded-xl overflow-hidden shadow-xl">
-                            <img src="images/Course.webp" alt="Training Courses" class="object-cover w-full h-[400px]">
+                            <img src="images/Course.webp" alt="Training Courses" class="object-cover w-full h-[300px] md:h-[400px]">
                         </div>
                     </div>
                 </div>
