revert on labour design

--- a/index.html
+++ b/index.html
@@ -631,9 +631,9 @@
         <section id="labour" class="py-20">
             <div class="container mx-auto px-4">
                 <h2 class="text-4xl font-bold text-center mb-12">Labour Solutions</h2>
-                <div class="grid md:grid-cols-3 gap-8">
+                <div class="grid md:grid-cols-3 divide-y md:divide-y-0 md:divide-x divide-gray-200">
                     <!-- Labor Dispute Resolution -->
-                    <div class="p-6 md:p-8 text-center bg-white rounded-lg shadow-md">
+                    <div class="p-4 md:p-8 text-center">
                         <div class="w-16 h-16 mx-auto mb-6 bg-teal-950 rounded-full flex items-center justify-center">
                             <i class="fas fa-gavel text-2xl text-white"></i>
                         </div>
@@ -646,7 +646,7 @@
                     </div>
 
                     <!-- Payroll Services -->
-                    <div class="p-6 md:p-8 text-center bg-white rounded-lg shadow-md">
+                    <div class="p-4 md:p-8 text-center">
                         <div class="w-16 h-16 mx-auto mb-6 bg-teal-950 rounded-full flex items-center justify-center">
                             <i class="fas fa-money-check-alt text-2xl text-white"></i>
                         </div>
@@ -661,7 +661,7 @@
                     </div>
 
                     <!-- Employment Equity -->
-                    <div class="p-6 md:p-8 text-center bg-white rounded-lg shadow-md">
+                    <div class="p-4 md:p-8 text-center">
                         <div class="w-16 h-16 mx-auto mb-6 bg-teal-950 rounded-full flex items-center justify-center">
                             <i class="fas fa-balance-scale text-2xl text-white"></i>
                         </div>
