--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         
         .nav-link::after {
             content: '';
-            position: absolute;
+            position: sticky;
             width: 0;
             height: 2px;
             bottom: -4px;
