--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
         </div>
 
         <!-- Bottom Footer -->
-        <div class="border-t border-white">
+        <div class="w-1/3 border-t border-white">
             <div class="container mx-auto px-4 py-6">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <div class="mb-4 md:mb-0">
