case sensitive error fix

--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
             height: 100%;
             opacity: 0;
             transition: opacity 0.5s ease-in-out;
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/slide2.webp');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/Slide2.webp');
             background-size: cover;
             background-position: center;
         }
 
         .slide:nth-child(2) {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/slide1.webp');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/Slide1.webp');
             background-size: cover;
             background-position: center;
         }
 
         .slide:nth-child(3) {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/slide3.webp');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/Slide3.webp');
             background-size: cover;
             background-position: center;
         }
