--- a/index.html
+++ b/index.html
@@ -491,13 +491,14 @@
         <!-- HR Services Section -->
         <section id="hr" class="py-20 relative">
             <!-- Background Image with Overlay -->
-            <div class="absolute inset-0 bg-cover bg-center bg-fixed" style="background-image: url('images/Teach.webp');">
+            <div class="absolute inset-0 bg-cover bg-center bg-fixed md:bg-fixed" style="background-image: url('images/Teach.webp');">
                 <div class="absolute inset-0 bg-gray-900 bg-opacity-75"></div>
             </div>
 
             <div class="container mx-auto px-4 relative">
-                <h2 class="text-4xl font-bold text-center mb-8 text-white" data-aos="fade-down">HR Services</h2>
-
+                <h2 class="text-4xl font-bold text-center mb-4 text-white" data-aos="fade-down">HR Services</h2>
+                <p class="text-xl text-center mb-12 text-gray-300 max-w-3xl mx-auto" data-aos="fade-up">Comprehensive HR solutions tailored to your organization's needs</p>
+                
                 <!-- First Row - HR Consulting -->
                 <div class="mb-8" data-aos="fade-up" data-aos-delay="100">
                     <div class="backdrop-blur-lg bg-white bg-opacity-10 rounded-xl p-8 text-white border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300">
@@ -510,7 +511,7 @@
                             I also provide hands-on support to help you manage your everyday people's issues.
                             The services offered include:
                         </p>
-                        <div class="grid grid-cols-2 gap-4">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                             <ul class="space-y-3 text-gray-300">
                                 <li class="flex items-start">
                                     <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
@@ -560,7 +561,7 @@
                             We provide ongoing HR support and structural analysis to ensure your business meets its strategic targets successfully.
                             Key services include:
                         </p>
-                        <div class="grid grid-cols-2 gap-4">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                             <ul class="space-y-3 text-gray-300">
                                 <li class="flex items-start">
                                     <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
@@ -603,7 +604,7 @@
                             HR audits help identify compliance issues and establish best practices.
                             Key services include:
                         </p>
-                        <div class="grid grid-cols-2 gap-4">
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                             <ul class="space-y-3 text-gray-300">
                                 <li class="flex items-start">
                                     <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
@@ -613,7 +614,6 @@
                                     <i class="fas fa-check-circle text-orange-300 mt-1 mr-2"></i>
                                     <span>Department of labor audit checklist</span>
                                 </li>
-                                
                             </ul>
                             <ul class="space-y-3 text-gray-300">
                                 <li class="flex items-start">
