error fix attempt 1

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-6">
+                    <a href="#" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group"></a>
                     <a href="#about" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">About</a>
                     <a href="#hr" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">HR</a>
                     <a href="#labour" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">Labour</a>
