nav error fix 2

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-6">
-                    <a href="#" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group"></a>
+                    <a href="#slide" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group"></a>
                     <a href="#about" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">About</a>
                     <a href="#hr" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">HR</a>
                     <a href="#labour" class="nav-link text-gray-600 hover:text-orange-300 text-sm font-medium relative group">Labour</a>
@@ -311,7 +311,7 @@
     <!-- Main Content Sections -->
     <main>
         <!-- Slideshow Section -->
-        <section class="relative bg-gray-900 overflow-hidden">
+        <section id="slide" class="relative bg-gray-900 overflow-hidden">
             <div class="slideshow-container">
                 <!-- Slide 1 -->
                 <div class="slide active">
