--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <style>
         /* Prevent horizontal overflow */
-        html, body {
+        main, body {
             overflow-x: hidden;
             width: 100%;
         }
