--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         main, body {
             overflow-x: hidden;
             width: 100%;
+            position: relative;
         }
 
         .nav-link {
