sticky nav fix attemp3 (overflow fix)

--- a/index.html
+++ b/index.html
@@ -491,17 +491,17 @@
         </section>
                    
         <!-- HR Services Section -->
-        <section id="hr" class="py-20 relative">
+        <section id="hr" class="py-20 relative overflow-hidden">
             <!-- Background Image with Overlay -->
             <div class="absolute inset-0 bg-cover bg-center bg-fixed" style="background-image: url('images/Teach.webp');">
                 <div class="absolute inset-0 bg-gray-900 bg-opacity-75"></div>
             </div>
 
             <div class="container mx-auto px-4 relative">
-                <h2 class="text-4xl font-bold text-center mb-8 text-white" data-aos="fade-down">HR Services</h2>
+                <h2 class="text-4xl font-bold text-center mb-8 text-white overflow-hidden" data-aos="fade-down">HR Services</h2>
 
                 <!-- First Row - HR Consulting -->
-                <div class="mb-8" data-aos="fade-up" data-aos-delay="100">
+                <div class="mb-8 overflow-hidden" data-aos="fade-up" data-aos-delay="100">
                     <div class="backdrop-blur-lg bg-white bg-opacity-10 rounded-xl p-8 text-white border border-white border-opacity-20 hover:bg-opacity-20 transition-all duration-300">
                         <div class="bg-orange-300 w-16 h-16 rounded-lg flex items-center justify-center mb-6">
                             <i class="fas fa-handshake text-2xl"></i>
@@ -725,9 +725,9 @@
                 </div>
 
                 <!-- Training Courses -->
-                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center">
+                <div class="grid md:grid-cols-2 gap-8 md:gap-12 items-center overflow-hidden">
                     <!-- Content Column -->
-                    <div class="space-y-4 md:space-y-6 order-2 md:order-1" data-aos="fade-right" data-aos-delay="200">
+                    <div class="space-y-4 md:space-y-6 order-2 md:order-1 overflow-hidden" data-aos="fade-right" data-aos-delay="200">
                         <h3 class="text-2xl font-semibold text-white">Specialized Training Courses</h3>
                         <p class="text-white text-sm md:text-base">
                             We assist organisations in complying with the Sector Education and Training Authority (SETA) by offering expert guidance and support across key areas of the Skills Development framework.
@@ -758,7 +758,7 @@
                     </div>
 
                     <!-- Image Column -->
-                    <div class="relative order-1 md:order-2" data-aos="fade-left" data-aos-delay="300">
+                    <div class="relative order-1 md:order-2 overflow-hidden" data-aos="fade-left" data-aos-delay="300">
                         <div class="aspect-w-16 aspect-h-9 rounded-xl overflow-hidden shadow-xl">
                             <img src="images/Course.webp" alt="Training Courses" class="object-cover w-full h-[300px] md:h-[400px]">
                         </div>
