mobile parallax img fix 1

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
         <!-- HR Services Section -->
         <section id="hr" class="py-20 relative">
             <!-- Background Image with Overlay -->
-            <div class="absolute inset-0 bg-cover bg-center bg-fixed" style="background-image: url('images/Teach.webp');">
+            <div class="absolute inset-0 bg-cover bg-center bg-scroll md:bg-fixed" style="background-image: url('images/Teach.webp');">
                 <div class="absolute inset-0 bg-gray-900 bg-opacity-75"></div>
             </div>
 
