--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <a href="tel: 0815369120" class="hover:text-gray-300">
                         <i class="fas fa-phone"></i> 081 536 9120
                     </a>
-                    <a href="mailto:info@fatsolelo.com" class="hover:text-gray-300">
-                        <i class="fas fa-envelope"></i>  Seba.Fatsolelo@gmail.com
+                    <a href="mailto:info@fatsolelo.co.za" class="hover:text-gray-300">
+                        <i class="fas fa-envelope"></i>  info@fatsolelo.co.za
                     </a>
                     <a href="#" class="hover:text-gray-300">
                         <i class="fas fa-clock"></i>  Monday - Friday 09:00 - 16:00
@@ -64,7 +64,7 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-2">
                 <div class="flex items-center">
-                    <img src="images/FatsoLelo-logo.webp" alt="FatsoLelo Logo" class="h-14">
+                    <img src="images/FatsoLelo-logo.webp" alt="FatsoLelo Logo" class="h-18 w-18 md:h-24 md:w-24">
                 </div>
                 
                 <!-- Desktop Menu -->
@@ -507,8 +507,8 @@
                         </div>
                         <h3 class="text-2xl font-semibold mb-4">HR Consulting</h3>
                         <p class="text-gray-300 mb-6">
-                            As an experienced HR Consultant, I review and update your current employment documentation to ensure that it is fit-for-purpose for your business and keeps you in line with ever-changing legislation. 
-                            I also provide hands-on support to help you manage your everyday people's issues.
+                            As an experienced HR consultants, we specialise in reviewing and updating your existing employment documentation to ensure that it aligns with current legislation and is tailored to suitthe unique needs of your business. 
+                            In addition, we offer practical hands-on support to help you effectively manage day-to-day employee relations and people management challenges.
                             The services offered include:
                         </p>
                         <div class="grid grid-cols-2 gap-4">
