--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-2">
                 <div class="flex items-center">
-                    <img src="images/FatsoLelo-logo.webp" alt="FatsoLelo Logo" class="h-18 w-18 md:h-24 md:w-24">
+                    <img src="images/FatsoLelo-logo.webp" alt="FatsoLelo Logo" class="h-18 md:h-24 md:w-30">
                 </div>
                 
                 <!-- Desktop Menu -->
