--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <a href="tel: 0815369120" class="hover:text-gray-300 text-sm flex items-center">
                         <i class="fas fa-phone mr-1"></i> 081 536 9120
                     </a>
-                    <a href="mailto:info@fatsolelo.com" class="hover:text-gray-300 text-sm flex items-center">
-                        <i class="fas fa-envelope mr-1"></i> Seba.Fatsolelo@gmail.com
+                    <a href="mailto:info@fatsolelo.co.za" class="hover:text-gray-300 text-sm flex items-center">
+                        <i class="fas fa-envelope mr-1"></i> info@fatsolelo.co.za
                     </a>
                 </div>
                 <!-- Second Row -->
