--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                         </li>
                         <li class="flex items-start space-x-3">
                             <i class="fas fa-envelope mt-1 text-gray-400"></i>
-                            <a href="mailto:Seba.Fatsolelo@gmail.com" class="text-gray-400 hover:text-white transition-colors">Seba.Fatsolelo@gmail.com</a>
+                            <a href="mailto:info@fatsolelo.co.za" class="text-gray-400 hover:text-white transition-colors">info@fatsolelo.co.za</a>
                         </li>
                         <li class="flex items-start space-x-3">
                             <i class="fas fa-map-marker-alt mt-1 text-gray-400"></i>
@@ -923,7 +923,7 @@
             <div class="container mx-auto px-4 py-6">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <div class="mb-4 md:mb-0">
-                        <p class="text-gray-400">&copy; 2025 FatsoLelo. All rights reserved.</p>
+                        <p class="text-gray-400">&copy; 2025 Fatsolelo. All rights reserved.</p>
                     </div>
                     <div class="flex space-x-6">
                         <a href="https://www.unitylan.co.za" class="text-gray-400 hover:text-white transition-colors">Designed by Unitylan</a>
