--- a/index.html
+++ b/index.html
@@ -450,19 +450,21 @@
                     <!-- Image Column -->
                     <div class="relative order-2 md:order-none">
                         <div class="aspect-w-4 aspect-h-3 rounded-lg overflow-hidden shadow-xl">
-                            <img src="images/Talk2.webp" 
+                            <img src="images/Time.webp" 
                                  alt="FatsoLelo Team" 
                                  class="object-cover w-full h-full">
                         </div>
                         <!-- Desktop Experience Card -->
-                        <div class="absolute -bottom-11 -right-6 bg-teal-950 text-white p-6 rounded-lg shadow-lg hidden md:block">
-                            <p class="text-2xl font-bold">20+</p>
-                            <p class="text-sm">Years of Experience</p>
+                        <div class="absolute -bottom-16 -right-8 bg-gray-50 text-white p-6 rounded-lg shadow-lg hidden md:block">
+                            <img src="images/illustration.webp" 
+                                 alt="illustration" 
+                                 class="object-cover w-[250px] h-[200px]">
                         </div>
                         <!-- Mobile Experience Card -->
                         <div class="md:hidden absolute -bottom-6 -right-4 bg-teal-950 text-white p-4 rounded-lg shadow-lg">
-                            <p class="text-xl font-bold">20+</p>
-                            <p class="text-xs">Years of Experience</p>
+                            <img src="images/illustration.webp" 
+                                 alt="illustration" 
+                                 class="object-cover w-[250px] h-[200px]">
                         </div>
                     </div>
 
@@ -479,11 +481,6 @@
                         <p class="mb-6">
                             Our services are designed to support your HR functions while ensuring compliance, development, and growth for your business.
                         </p>
-                        <div class="aspect-w-4 aspect-h-3 rounded-lg text-center overflow-hidden shadow-sm flex justify-center items-center order-3 md:order-none">
-                            <img src="images/illustration.webp" 
-                                 alt="illustration" 
-                                 class="object-cover w-[300px] h-[250px]">
-                        </div>
                     </div>
                 </div>
             </div>
